--- a/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/Portfolio.xaml
+++ b/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/Portfolio.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="com.gordoncm.SensorsBox.Portfolio">
+             x:Class="com.gordoncm.SensorsBox.Portfolio"
+             Title="Portfolio">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
