added my favs and fixed AND SQL bug

--- a/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/AppShell.xaml
+++ b/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/AppShell.xaml
@@ -27,7 +27,8 @@
     </Shell.Resources>
 
     <TabBar>
-        <ShellContent Title="Coins" Icon="icon_about.png" Route="CoinsPage" ContentTemplate="{DataTemplate local:CoinList}" />
+        <ShellContent Title="Coins" Icon="icon_about.png" Route="CoinsPage" ContentTemplate="{DataTemplate local:CoinList}"/>
+        <ShellContent Title="My Favorites" Icon="icon_about.png" Route="MyFavs" ContentTemplate="{DataTemplate local:MyFavs}" />
         <ShellContent Title="Portfolio" Icon="icon_about.png" Route="PortfolioPage" ContentTemplate="{DataTemplate local:Portfolio}" />
         <ShellContent Title="Settings" Icon="icon_about.png" Route="SettingsPage" ContentTemplate="{DataTemplate local:Settings}" />
     </TabBar>
