Added functionality for saving user profile changes. Updated User database

--- a/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/Settings.xaml
+++ b/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/Settings.xaml
@@ -37,7 +37,7 @@
                         ItemsSource="{Binding AvailableCurrency}"
                         SelectedItem="{Binding User.Currency}" />
 
-            <Button Text="Save" BackgroundColor="DarkGray" />
+            <Button Text="Save" BackgroundColor="DarkGray" Clicked="SaveUser" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
