--- a/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/Settings.xaml
+++ b/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/Settings.xaml
@@ -2,7 +2,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="com.gordoncm.SensorsBox.Settings"
              Title="Settings"
-             Style="{StaticResource DynamicPageStyle}"
              xmlns:viewModels="clr-namespace:com.gordoncm.SensorsBox.ViewModels">
 
     <ContentPage.BindingContext>
@@ -10,35 +9,32 @@
     </ContentPage.BindingContext>
 
     <ContentPage.Content>
-        <StackLayout Margin="25">
-            <Label x:Name="WalletAddressLabel" Text="Enter wallet address" Style="{StaticResource DynamicLabelStyle}" />
-            <Entry x:Name="WalletAddressEntry" Placeholder="Wallet Address" Text="{Binding User.WalletAddress}" Style="{StaticResource DynamicEntryStyle}" />
+        <StackLayout Margin="25"> 
+            <Label Text="Enter username" />
+            <Entry x:Name="Username" Placeholder="Username" Text="{Binding User.UserName}" />
 
-            <Label x:Name="UsernameLabel" Text="Enter username" Style="{StaticResource DynamicLabelStyle}" />
-            <Entry x:Name="UsernameEntry" Placeholder="Username" Text="{Binding User.UserName}" Style="{StaticResource DynamicEntryStyle}" />
+            <Label Text="Preferred Name" />
+            <Entry x:Name="PreferredName" Placeholder="Preferred Name" Text="{Binding User.PreferedName}" />
 
-            <Label x:Name="PreferredNameLabel" Text="Preferred Name" Style="{StaticResource DynamicLabelStyle}" />
-            <Entry x:Name="PreferredNameEntry" Placeholder="Preferred Name" Text="{Binding User.PreferedName}" Style="{StaticResource DynamicEntryStyle}" />
-
-            <Label x:Name="ColorPickerLabel" Text="Color Theme" Style="{StaticResource DynamicLabelStyle}" />
-                <Picker x:Name="PrimaryColorPicker" Title="Primary Color" Style="{StaticResource DynamicPickerStyle}"
+            <Label Text="Color Theme" />
+                <Picker x:Name="PrimaryColorPicker" Title="Primary Color"
                         ItemsSource="{Binding AvailableColors}"
                         SelectedItem="{Binding User.PrimaryColor}" />
-                <Picker x:Name="SecondaryColorPicker" Title="Secondary Color" Style="{StaticResource DynamicPickerStyle}"
+                <Picker x:Name="SecondaryColorPicker" Title="Secondary Color"
                         ItemsSource="{Binding AvailableColors}"
                         SelectedItem="{Binding User.SecondaryColor}" />
 
-            <Label x:Name="FontSizeLabel" Text="Font Size" Style="{StaticResource DynamicLabelStyle}" />
-            <Picker x:Name="FontSizePicker" Title="Font Size" Style="{StaticResource DynamicPickerStyle}"
+            <Label Text="Font Size" />
+            <Picker x:Name="FontSizePicker" Title="Font Size"
                         ItemsSource="{Binding AvailableFontSizes}"
                         SelectedItem="{Binding User.FontSize}" />
 
-            <Label x:Name="CurrencyLabel" Text="Currency" Style="{StaticResource DynamicLabelStyle}" />
-            <Picker x:Name="CurrencyPicker" Title="Currency" Style="{StaticResource DynamicPickerStyle}"
+            <Label Text="Currency" />
+            <Picker x:Name="CurrencyPicker" Title="Currency"
                         ItemsSource="{Binding AvailableCurrency}"
                         SelectedItem="{Binding User.Currency}" />
 
-            <Button x:Name="SaveButton" Text="Save" Style="{StaticResource DynamicButtonStyle}" Clicked="SaveUser" />
+            <Button Text="Save" BackgroundColor="DarkGray" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
