--- a/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/AppShell.xaml
+++ b/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/AppShell.xaml
@@ -1,4 +1,4 @@
-﻿<Shell xmlns="http://xamarin.com/schemas/2014/forms"
+<Shell xmlns="http://xamarin.com/schemas/2014/forms"
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
               xmlns:local="clr-namespace:com.gordoncm.SensorsBox"
        x:Class="com.gordoncm.SensorsBox.AppShell">
@@ -11,18 +11,18 @@
     <Shell.Resources>
         <ResourceDictionary>
             <Style x:Key="BaseStyle" TargetType="Element">
-                <Setter Property="Shell.BackgroundColor" Value="Black" />
+                <Setter Property="Shell.BackgroundColor" Value="{StaticResource Primary}" />
                 <Setter Property="Shell.ForegroundColor" Value="White" />
                 <Setter Property="Shell.TitleColor" Value="White" />
-                <Setter Property="Shell.DisabledColor" Value="Black" />
-                <Setter Property="Shell.UnselectedColor" Value="Black" />
-                <Setter Property="Shell.TabBarBackgroundColor" Value="Black" />
-                <Setter Property="Shell.TabBarForegroundColor" Value="Black"/>
-                <Setter Property="Shell.TabBarUnselectedColor" Value="Black"/>
-                <Setter Property="Shell.TabBarTitleColor" Value="Black"/>
-                <Setter Property="Shell.TabBarDisabledColor" Value="Black"/>
-
+                <Setter Property="Shell.DisabledColor" Value="#B4FFFFFF" />
+                <Setter Property="Shell.UnselectedColor" Value="#95FFFFFF" />
+                <Setter Property="Shell.TabBarBackgroundColor" Value="{StaticResource Primary}" />
+                <Setter Property="Shell.TabBarForegroundColor" Value="White"/>
+                <Setter Property="Shell.TabBarUnselectedColor" Value="#95FFFFFF"/>
+                <Setter Property="Shell.TabBarTitleColor" Value="White"/>
             </Style>
+            <Style TargetType="TabBar" BasedOn="{StaticResource BaseStyle}" />
+            <Style TargetType="FlyoutItem" BasedOn="{StaticResource BaseStyle}" />
         </ResourceDictionary>
     </Shell.Resources>
 
@@ -32,4 +32,7 @@
         <ShellContent Title="Portfolio" Icon="icon_about.png" Route="PortfolioPage" ContentTemplate="{DataTemplate local:Portfolio}" />
         <ShellContent Title="Settings" Icon="icon_about.png" Route="SettingsPage" ContentTemplate="{DataTemplate local:Settings}" />
     </TabBar>
+
+ 
+
 </Shell>
