added dynamic settings EXCEPT for currency conversions

--- a/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/App.xaml
+++ b/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/App.xaml
@@ -5,9 +5,15 @@
     <Application.Resources>
         <ResourceDictionary>
             <Color x:Key="Primary">#2196F3</Color>
+            <Style TargetType="NavigationPage">
+                <Setter Property="BarBackgroundColor" Value="White"/>
+                <Setter Property="BarTextColor" Value="OrangeRed" />
+            </Style>
             <Style TargetType="Button">
                 <Setter Property="TextColor" Value="White"></Setter>
+
                 <Setter Property="VisualStateManager.VisualStateGroups">
+                 
                     <VisualStateGroupList>
                         <VisualStateGroup x:Name="CommonStates">
                             <VisualState x:Name="Normal">
